--- a/login.html
+++ b/login.html
@@ -1,12 +1,6 @@
 <html>
-    <style>
-        .div-1 {background-color: black;}
-
-    </style>
-    <div class="div-1">
-        <center>
-            <p style="color:white">VIVE LA EXPERIENCIA. RESERVA TU HORA</p>
-            </center>
+    <div>
+        <p>VIVE LA EXPERIENCIA. RESERVA TU HORA</p>
     </div>
     <div>
         <image src="assets/img/barbe2.png" />
@@ -17,6 +11,6 @@
        <input placeholder="CONTRASENA"/><br><br>
        <button> ENTRAR</button>
        <P>¿OLVIDADSTE TU CLAVE?</P>
-       <P>¿NO TIENES CUENTAaaaa?</P>
+       <P>¿NO TIENES CUENTA?</P>
     </div>
 </html>    
