--- a/creausuario.html
+++ b/creausuario.html
@@ -1,12 +1,7 @@
 <html>
-    <style>
-        .div-1 {background-color: black;}
-
-    </style>
-    <div class="div-1">
-        <center>
-            <p style="color:white">VIVE LA EXPERIENCIA. RESERVA TU HORA</p>
-            </center>
+    <div>
+        <p>VIVE LA EXPERIENCIA. RESERVA TU HORA</p>
+            
     </div>
     <div>
         <image src="assets/img/barbe3.png" />
