--- a/creausuario.html
+++ b/creausuario.html
@@ -4,10 +4,7 @@
             
     </div>
     <div>
-        <image src="assets/img/barbe3.png" />
-    </div>
-    <div>
-       <image src="assets/img/barbe1.png" /><br><br> 
+       <image src="assets/img/carru2_1.png" /><br><br> 
        <input placeholder="CORREO" /><br><br>
        <input placeholder="CONTRASENA"/><br>
        <input placeholder="REPITA CONTRASENA"/><br><br>
