--- a/homepage.html
+++ b/homepage.html
@@ -1,3 +1,21 @@
 <html>
-    <h1>hola buenas tardes julio</h1>
-</html>
+    <div>
+        <p>HOME</p>
+        <p>SERVICIOS</p>
+        <p>UBICACION Y CONTACTO</p>
+        <p>RESERVA</p>
+    </div>
+    <div> 
+        <image src="assets/img/logo.png" /> 
+    </div>
+    <div>
+        <image src="assets/img/barbe1.png" /> 
+        <image src="assets/img/barbe2.png" />
+        <image src="assets/img/barbe3.png" />
+    </div>
+    <p>Nos especializamos en cortes de cabello, barba y afeitado para <br> hombres. Nuestro equipo de barberos se preocupa de entregar <br> siempre un servicio de primer nivel a nuestros clientes.</p>
+    <p>GARANTIZAMOS EXCELENCIA Y SATISFACCION.</p>
+    <h1>NUESTROS SERVICIOS</h1>
+    <image src="assets/img/servicios.png" />
+    <image src="assets/img/"/>
+    </html>
