--- a/restorepass.html
+++ b/restorepass.html
@@ -1,17 +1,13 @@
 <htnl>
     <div>
-        <image src="assets/img/barbe1.png" />
+        <image src="assets/img/restore.png" />
     </div>
     <div>
-        <image src="assets/img/barbe2.png" />
+        <image src="assets/img/logo.png" />
     </div>
-    <div>
-       <image src="assets/img/barbe1.png" /><br> 
-       <input placeholder="USUARIO" /><br><br>
-       <input placeholder="CONTRASENA"/><br><br>
-       <button> ENTRAR</button>
-       <P>¿OLVIDADSTE TU CLAVE?</P>
+    <div> 
+       <input placeholder="INGRESA TU EMAIL" /><br>
+       <button> ENVIAR CORREO RECUPERACION</button><br><br><br>
        <P>¿NO TIENES CUENTA?</P>
     </div>
-
 </htnl>
