--- a/homepage.html
+++ b/homepage.html
@@ -1,9 +1,9 @@
 <html>
     <div>
         <p>HOME</p>
-        <p>SERVICIOS</p>
-        <p>UBICACION Y CONTACTO</p>
-        <p>RESERVA</p>
+        <a href="#servicios">SERVICIOS</a><br><br>
+        <a href="#ubicacion">UBICACIN Y CONTACTO</a><br><br>
+        <a href="login.html">RESERVAR</a>
     </div>
     <div> 
         <image src="assets/img/logo.png" /> 
@@ -15,7 +15,11 @@
     </div>
     <p>Nos especializamos en cortes de cabello, barba y afeitado para <br> hombres. Nuestro equipo de barberos se preocupa de entregar <br> siempre un servicio de primer nivel a nuestros clientes.</p>
     <p>GARANTIZAMOS EXCELENCIA Y SATISFACCION.</p>
+    <a name="servicios"></a>
     <h1>NUESTROS SERVICIOS</h1>
     <image src="assets/img/servicios.png" />
-    <image src="assets/img/"/>
+    <image src="assets/img/carrusel.png"/>
+    <a name="ubicacion"></a>
+    <h1>UBICACION</h1>
+    <image src="assets/img/mapa.png">
     </html>
