--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
        <image src="assets/img/barbe1.png" /><br> 
        <input placeholder="USUARIO" /><br><br>
        <input placeholder="CONTRASENA"/><br><br>
-       <button> ENTRAR</button>
-       <P>¿OLVIDADSTE TU CLAVE?</P>
-       <P>¿NO TIENES CUENTA?</P>
+       <button> ENTRAR</button><br>
+       <a href="restorepass.html">¿OLVIDADSTE TU CLAVE?</a><br>
+       <a href="creausuario.html">¿NO TIENES CUENTA?</a>
     </div>
 </html>    
