--- a/restorepass.html
+++ b/restorepass.html
@@ -7,7 +7,7 @@
     </div>
     <div> 
        <input placeholder="INGRESA TU EMAIL" /><br>
-       <button> ENVIAR CORREO RECUPERACION</button><br><br><br>
+       <a href="revisacorreo.html"> <button>CORREO RECUPERACION</button>></a> <br><br><br>
        <P>¿NO TIENES CUENTA?</P>
     </div>
 </htnl>
