termino de avance

--- a/homepage.html
+++ b/homepage.html
@@ -21,5 +21,9 @@
     <image src="assets/img/carrusel.png"/>
     <a name="ubicacion"></a>
     <h1>UBICACION</h1>
-    <image src="assets/img/mapa.png">
+    <image src="assets/img/mapa.png" />
+    <p>Sta. Elena de Huechuraba 1660, huechuraba, Region <br> Metropolitana</p>
+    <p>CONTACTO</p>
+    <image src="assets/img/whatsapplogo.webp"/>    
+    <P>MÁS QUE UNA BARBERÍA, UNA EXPERIENCIA DE LUJO.</P>    
     </html>
