--- a/restorepass.html
+++ b/restorepass.html
@@ -8,6 +8,6 @@
     <div> 
        <input placeholder="INGRESA TU EMAIL" /><br>
        <a href="revisacorreo.html"> <button>CORREO RECUPERACION</button>></a> <br><br><br>
-       <P>¿NO TIENES CUENTA?</P>
+       <a href="creausuario.html">¿NO TIENES CUENTA?</a>
     </div>
 </htnl>
