se arregla nombre de archivo html

--- a/homepage.html
+++ b/homepage.html
@@ -24,6 +24,6 @@
     <image src="assets/img/mapa.png" />
     <p>Sta. Elena de Huechuraba 1660, huechuraba, Region <br> Metropolitana</p>
     <p>CONTACTO</p>
-    <image src="assets/img/whatsapplogo.webp"/>    
+    <a href="https://walink.co/778d34"><image src="assets/img/whatsapplogo.webp"/></a>    
     <P>MÁS QUE UNA BARBERÍA, UNA EXPERIENCIA DE LUJO.</P>    
     </html>
