--- a/restorepass.html
+++ b/restorepass.html
@@ -1,4 +1,4 @@
-<htnl>
+<html>
     <div>
         <image src="assets/img/restore.png" />
     </div>
@@ -10,4 +10,4 @@
        <a href="revisacorreo.html"> <button>CORREO RECUPERACION</button>></a> <br><br><br>
        <a href="creausuario.html">¿NO TIENES CUENTA?</a>
     </div>
-</htnl>
+</html>
