se agrega link de facebook

--- a/homepage.html
+++ b/homepage.html
@@ -24,6 +24,8 @@
     <image src="assets/img/mapa.png" />
     <p>Sta. Elena de Huechuraba 1660, huechuraba, Region <br> Metropolitana</p>
     <p>CONTACTO</p>
-    <a href="https://walink.co/778d34"><image src="assets/img/whatsapplogo.webp"/></a>    
+    <a href="https://walink.co/778d34"><image src="assets/img/whatsapplogo.webp"/></a>  
+    <a href="http://www.instagram.com/hsbarberia"><image src="assets/img/instagram.jpg"/></a>
+    <a href="https//www.facebook.com/hsbarberia"><image src="assets/img/facebook.jpg"/></a> 
     <P>MÁS QUE UNA BARBERÍA, UNA EXPERIENCIA DE LUJO.</P>    
     </html>
