--- a/reserva.html
+++ b/reserva.html
@@ -1,9 +1,8 @@
 <html>
-    <body>
-        <header>
+        <head>
             <h1>Reservar hora de atencion</h1>
-        </header>
-        <main>
+        </head>
+        <body>
                 <div>
                     <label for="fecha_atencion">Seleccione fecha:</label>
                     <input type="date" id="fecha_atencion" name="fecha_atencion" required>
@@ -18,5 +17,5 @@
                     <button type="submit">Agendar hora</button>
                 </div>
 
-        </main>
+        </body>
 </html>
