--- a/login.html
+++ b/login.html
@@ -1,16 +1,22 @@
 <html>
-    <div>
-        <p>VIVE LA EXPERIENCIA. RESERVA TU HORA</p>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <div class="banner">
+        <h1>VIVE LA EXPERIENCIA. RESERVA TU HORA</h1>
     </div>
-    <div>
-        <image src="assets/img/barbe2.png" />
+    <div class="contenedor">
+        <div>
+             <image src="assets/img/barbe2.png" />
+        </div>
+    <center><div>
+            <div class="logo"><image src="assets/img/logo.png"/></div> 
+         <div>
+             <input placeholder="USUARIO" /><br><br>
+            <input placeholder="CONTRASENA"/><br><br>
+            <button> ENTRAR</button><br>
+             <a href="restorepass.html">¿OLVIDADSTE TU CLAVE?</a><br>
+             <a href="creausuario.html">¿NO TIENES CUENTA?</a>
+        </div></center>
     </div>
-    <div>
-       <image src="assets/img/barbe1.png" /><br> 
-       <input placeholder="USUARIO" /><br><br>
-       <input placeholder="CONTRASENA"/><br><br>
-       <button> ENTRAR</button><br>
-       <a href="restorepass.html">¿OLVIDADSTE TU CLAVE?</a><br>
-       <a href="creausuario.html">¿NO TIENES CUENTA?</a>
+        </div>
     </div>
 </html>    
