--- a/login.html
+++ b/login.html
@@ -1,22 +1,21 @@
 <html>
     <link rel="stylesheet" href="assets/css/styles.css">
+    
     <div class="banner">
         <h1>VIVE LA EXPERIENCIA. RESERVA TU HORA</h1>
     </div>
+
     <div class="contenedor">
+            <div>
+                 <image src="assets/img/barbe2.png" />
+            </div>
         <div>
-             <image src="assets/img/barbe2.png" />
-        </div>
-    <center><div>
-            <div class="logo"><image src="assets/img/logo.png"/></div> 
-         <div>
-             <input placeholder="USUARIO" /><br><br>
+            <image src="assets/img/logo.png"/>
+            <input placeholder="USUARIO" /><br><br>
             <input placeholder="CONTRASENA"/><br><br>
             <button> ENTRAR</button><br>
-             <a href="restorepass.html">¿OLVIDADSTE TU CLAVE?</a><br>
-             <a href="creausuario.html">¿NO TIENES CUENTA?</a>
-        </div></center>
-    </div>
+            <h2><a href="restorepass.html">¿OLVIDADSTE TU CLAVE?</a></h2><br>
+            <h2><a href="creausuario.html">¿NO TIENES CUENTA?</a></h2>
         </div>
-    </div>
+    </div>    
 </html>    
