--- a/login.html
+++ b/login.html
@@ -9,11 +9,11 @@
             <div>
                  <image src="assets/img/barbe2.png" />
             </div>
-        <div>
-            <image src="assets/img/logo.png"/>
-            <input placeholder="USUARIO" /><br><br>
-            <input placeholder="CONTRASENA"/><br><br>
-            <button> ENTRAR</button><br>
+        <div class="inicio">
+            <center><image src="assets/img/logo.png"/></center><br><br>
+            <center><input placeholder="USUARIO" /></center><br><br>
+            <center><input placeholder="CONTRASENA"/></center><br><br>
+            <center><button> ENTRAR</button></center><br>
             <h2><a href="restorepass.html">¿OLVIDADSTE TU CLAVE?</a></h2><br>
             <h2><a href="creausuario.html">¿NO TIENES CUENTA?</a></h2>
         </div>
