--- a/login.html
+++ b/login.html
@@ -14,7 +14,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-sm-8 col-lg-4 login">
+            <div class=" col-lg-4 login">
              
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
                 <img src="/assets//img/logo-s.png" class="login-logo">
