--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                     <center><a href="creausuario.html">¿NO TIENES CUENTA?</a></center>
                 </div>
             </div>
-            <div class="col-sm-4 col-lg-8 img_lateral"></div>
+            <div class="col-lg-8 img_lateral"></div>
         </div>
     </div>
 </body>
