--- a/revisacorreo.html
+++ b/revisacorreo.html
@@ -1,11 +1,27 @@
-<htnl>
-    <div>
-        <image src="assets/img/restore.png" />
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HS-Barberia</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/estilo.css">
+</head>
+<body>
+    <div class="titulo">
+        Estas a un paso de reservar tu hora
     </div>
-    <div>
-        <image src="assets/img/logo.png" />
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class=" col-lg-4 login">
+                <div style="background-color: white; padding: 40px;border-radius:5%;">
+                <img src="/assets//img/logo-s.png" class="login-logo">
+                <p class="pcorreo">Correo de recuperacion enviado. Por favor revisa tu bandeja de entrada.</p>
+                </div>
+            </div>
+            <div class="col-lg-8 img_restorepass"></div>
+        </div>
     </div>
-    <div> 
-        <p>CORREO DE RECUPERACION ENVIADO. <BR> SIGUE LAS INSTRUCCIONES EN TU EMAIL</p>
-    </div>
-</htnl>
+</body>
+</html>
