--- a/creausuario.html
+++ b/creausuario.html
@@ -36,7 +36,7 @@
                     <center><a class="btn btn-primary" href="#" role="button">Iniciar</a></center>
                 </div>
             </div>
-            <div class="col-sm-4 col-lg-8 img_lateral_crea"></div>
+            <div class="col-lg-8 img_lateral_crea"></div>
         </div>
     </div>
 </body>
