--- a/restorepass.html
+++ b/restorepass.html
@@ -1,13 +1,33 @@
-<html>
-    <div>
-        <image src="assets/img/restore.png" />
+!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>HS-Barberia</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/assets/css/estilo.css">
+</head>
+<body>
+    <div class="titulo">
+        Recupera tu clave, Reserva tu hora
     </div>
-    <div>
-        <image src="assets/img/logo.png" />
+
+    <div class="container-fluid">
+        <div class="row">
+            <div class=" col-lg-4 login">
+             
+                <div style="background-color: white; padding: 40px;border-radius:5%;">
+                <img src="/assets//img/logo-s.png" class="login-logo">
+                <div class="mb-3 align-items-center justify-content-center">
+                        <center><label for="formGroupExampleInput" class="form-label text-center">Ingresa tu email</label></center>
+                        <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+                    </div>
+                    <center><a class="btn btn-primary" href="revisacorreo.html" role="button">Correo de recuperacion</a></center><br>
+                    <center><a href="creausuario.html">¿NO TIENES CUENTA?</a></center>
+                </div>
+            </div>
+            <div class="col-lg-8 img_restorepass"></div>
+        </div>
     </div>
-    <div> 
-       <input placeholder="INGRESA TU EMAIL" /><br>
-       <a href="revisacorreo.html"> <button>CORREO RECUPERACION</button>></a> <br><br><br>
-       <a href="creausuario.html">¿NO TIENES CUENTA?</a>
-    </div>
+</body>
 </html>
