--- a/homepage.html
+++ b/homepage.html
@@ -75,8 +75,8 @@
     <div class="container-fluid">
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
     </div>
-    <div class="row">
-        <div class="col-lg-3">
+    <div class="row mx-5">
+        <div class="col ml-5">
             <div class="card" style="width: 18rem;">
                 <img src="assets/img/servicios.png" class="card-img-top">
                 <div class="card-body">
@@ -87,7 +87,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-6">
+        <div class="col ml-5">
             <div class="card" style="width: 18rem;">
                 <img src="assets/img/servicios.png" class="card-img-top">
                 <div class="card-body">
@@ -99,7 +99,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-9">
+        <div class="col ml-5">
             <div class="card" style="width: 18rem;">
                 <img src="assets/img/servicios.png" class="card-img-top">
                 <div class="card-body">
@@ -110,7 +110,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-lg-12">
+        <div class="col ml-5">
             <div class="card" style="width: 18rem;">
                 <img src="assets/img/servicios.png" class="card-img-top">
                 <div class="card-body">
