se agregan cambios en el homepage y se agregan fotografias

--- a/homepage.html
+++ b/homepage.html
@@ -31,22 +31,22 @@
                 <div class="carousel-item active">
                     <img src="assets/img/barbe2.png" class="d-block w-100" style="height: 440px;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>First slide label</h5>
-                        <p>Some representative placeholder content for the first slide.</p>
+                        <h5>Experiencia de Corte Excepcional</h5>
+                        <p>Sumérgete en un mundo de elegancia y precisión con nuestros cortes de alta calidad.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="assets/img/barbe3.png" class="d-block w-100" style="height: 440px;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Second slide label</h5>
-                        <p>Some representative placeholder content for the second slide.</p>
+                        <h5>Definición y Distinción</h5>
+                        <p>Logra una barba definida y distinguida con nuestra atención meticulosa a cada detalle.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
                     <img src="assets/img/barbe1.png" class="d-block w-100" style="height: 440px;">
                     <div class="carousel-caption d-none d-md-block">
-                        <h5>Third slide label</h5>
-                        <p>Some representative placeholder content for the third slide.</p>
+                        <h5>Corte Personalizado</h5>
+                        <p style="background-color: black;">Deja que nuestro equipo de expertos transforme tu apariencia y eleve tu confianza a nuevas alturas.</p>
                     </div>
                 </div>
             </div>
@@ -74,66 +74,69 @@
 <body>
     <div class="container-fluid">
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
+        <div class="row">
+            <div class="col sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/cortecabello.png" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Corte de Cabello</h5>
+                        <p class="card-text">Asesoría, corte, lavado y peinado de cabello, incluye aplicación de pomada
+                            a elección</p>
+                        <p class="card-text">$15.000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/perfilado.png" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Perfilado de Barba</h5>
+                        <p class="card-text">Perfilado navaja, arreglo de barba, toallas calientes.Incluye aplicación de
+                            productos premium.
+                        </p>
+                        <p class="card-text">$13.000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/afeitado.png" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Afeitado al Ras</h5>
+                        <p class="card-text">Toallas calientes, aplicación de crema/gel de afeitar, rasurado con navaja
+                            y after shave.</p>
+                        <p class="card-text">$13.000</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col sm-3">
+                <div class="card" style="width: 18rem;">
+                    <img src="assets/img/facial.png" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Tratamiento Facial</h5>
+                        <p class="card-text">Limpieza, exfolación, toallas calientes, mascara de carbón, loción
+                            protectora e hidratante.</p>
+                        <p class="card-text">$14.000</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-    <div class="row mx-5">
-        <div class="col ml-5">
-            <div class="card" style="width: 18rem;">
-                <img src="assets/img/servicios.png" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Corte de Cabello</h5>
-                    <p class="card-text">Asesoría, corte, lavado y peinado de cabello, incluye aplicación de pomada
-                        a elección</p>
-                    <p class="card-text">$15.000</p>
-                </div>
-            </div>
-        </div>
-        <div class="col ml-5">
-            <div class="card" style="width: 18rem;">
-                <img src="assets/img/servicios.png" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Perfilado de Barba</h5>
-                    <p class="card-text">Perfilado navaja, arreglo de barba, toallas calientes.Incluye aplicación de
-                        productos premium.
-                    </p>
-                    <p class="card-text">$13.000</p>
-                </div>
-            </div>
-        </div>
-        <div class="col ml-5">
-            <div class="card" style="width: 18rem;">
-                <img src="assets/img/servicios.png" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Afeitado al Ras</h5>
-                    <p class="card-text">Toallas calientes, aplicación de crema/gel de afeitar, rasurado con navaja
-                        y after shave.</p>
-                    <p class="card-text">$13.000</p>
-                </div>
-            </div>
-        </div>
-        <div class="col ml-5">
-            <div class="card" style="width: 18rem;">
-                <img src="assets/img/servicios.png" class="card-img-top">
-                <div class="card-body">
-                    <h5 class="card-title">Tratamiento Facial</h5>
-                    <p class="card-text">Limpieza, exfolación, toallas calientes, mascara de carbón, loción
-                        protectora e hidratante.</p>
-                    <p class="card-text">$14.000</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="container-fluid psub" style="padding: 30px;">
+    <br><br><br>
+    <div class="container-fluid psub">
         UBICACIÓN
-    </div>
-    <div>
+    </div><br><br><br>
+    <div class="container-fluids" style="border-color: black; border-radius: 50%; padding: 40px">
         <center>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.292247802172!2d-70.68076012521905!3d-33.36343549305959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses-419!2scl!4v1711684061143!5m2!1ses-419!2scl"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
+                referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
         </center>
     </div>
 
 </body>
-
+<div class="container-fluid titulo">
+    Bienvenido "Home"
+</div>
 </html>
