se centra el div de servicios

--- a/homepage.html
+++ b/homepage.html
@@ -72,7 +72,7 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <center><div class="container-fluid">
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
         <div class="row">
             <div class="col sm-3">
@@ -121,7 +121,7 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div></center>
     <br><br><br>
     <div class="container-fluid psub">
         UBICACIÓN
