--- a/homepage.html
+++ b/homepage.html
@@ -9,13 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/css/estilo.css">
+    <link rel="stylesheet" href="c:/github/barberiac:/github/barberia/assets/css/estilo.css">
     <title>Document</title>
     <div class="container-fluid titulo">
         Bienvenido "Home"
     </div>
     <div class="container-fluid" style="padding: 15px;">
-        <center><img src="assets/img/logo-s.png" /></center>
+        <img src="assets/img/logo-s.png" />
     </div>
     <div class="container">
         <div id="carouselExampleCaptions" class="carousel slide">
@@ -72,7 +72,7 @@
 </head>
 
 <body>
-    <center><div class="container-fluid">
+    <div class="container-fluid">
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
         <div class="row">
             <div class="col sm-3">
@@ -121,18 +121,16 @@
                 </div>
             </div>
         </div>
-    </div></center>
+    </div>
     <br><br><br>
     <div class="container-fluid psub">
         UBICACIÓN
     </div><br><br><br>
     <div class="container-fluids" style="border-color: black; border-radius: 50%; padding: 40px">
-        <center>
             <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.292247802172!2d-70.68076012521905!3d-33.36343549305959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses-419!2scl!4v1711684061143!5m2!1ses-419!2scl"
                 width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
-        </center>
+                referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>       
     </div>
 
 </body>
