--- a/restorepass.html
+++ b/restorepass.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HS-Barberia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/estilo.css">
+    <link rel="stylesheet" href="c:/github/barberiac:/github/barberia/assets/css/estilo.css">
 </head>
 <body>
     <div class="titulo">
@@ -17,13 +17,13 @@
             <div class=" col-lg-4 login">
              
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
-                <img src="/assets//img/logo-s.png" class="login-logo">
+                <img src="c:/github/barberiac:/github/barberia/assets//img/logo-s.png" class="login-logo">
                 <div class="mb-3 align-items-center justify-content-center">
-                        <center><label for="formGroupExampleInput" class="form-label text-center">Ingresa tu email</label></center>
+                        <label for="formGroupExampleInput" class="form-label text-center">Ingresa tu email</label>
                         <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
                     </div>
-                    <center><a class="btn btn-primary" href="revisacorreo.html" role="button">Correo de recuperacion</a></center><br>
-                    <center><a href="creausuario.html">¿NO TIENES CUENTA?</a></center>
+                    <a class="btn btn-primary" href="revisacorreo.html" role="button">Correo de recuperacion</a><br>
+                    <a href="creausuario.html">¿NO TIENES CUENTA?</a>
                 </div>
             </div>
             <div class="col-lg-8 img_restorepass"></div>
