--- a/creausuario.html
+++ b/creausuario.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HS-Barberia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/estilo.css">
+    <link rel="stylesheet" href="c:/github/barberiac:/github/barberia/assets/css/estilo.css">
 </head>
 <body>
     <div class="titulo">
@@ -16,24 +16,24 @@
         <div class="row">
             <div class="mb-0 col-sm-8 col-lg-4 login">
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
-                <img src="/assets//img/logo-s.png" class="login-logo">
+                <img src="c:/github/barberiac:/github/barberia/assets//img/logo-s.png" class="login-logo">
                 <div class="mb-1 align-items-center justify-content-center ">
-                        <center><label for="formGroupExampleInput" class="form-label text-center ">Nombre</label></center>
+                        <label for="formGroupExampleInput" class="form-label text-center ">Nombre</label>
                         <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
                     </div>
                     <div class="mb-4">
-                        <center><label for="formGroupExampleInput2" class="form-label">Correo</label></center>
+                        <label for="formGroupExampleInput2" class="form-label">Correo</label>
                         <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="">
                     </div>
                     <div class="mb-1">
-                        <center><label for="formGroupExampleInput2" class="form-label">Contraseña</label></center>
+                        <label for="formGroupExampleInput2" class="form-label">Contraseña</label>
                         <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="">
                     </div>
                     <div class="mb-1">
-                        <center><label for="formGroupExampleInput2" class="form-label">Repita Contraseña</label></center>
+                        <label for="formGroupExampleInput2" class="form-label">Repita Contraseña</label>
                         <input type="password" class="form-control" id="formGroupExampleInput2" placeholder="">
                     </div>
-                    <center><a class="btn btn-primary" href="#" role="button">Iniciar</a></center>
+                    <a class="btn btn-primary" href="#" role="button">Iniciar</a>
                 </div>
             </div>
             <div class="col-lg-8 img_lateral_crea"></div>
