--- a/revisacorreo.html
+++ b/revisacorreo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HS-Barberia</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/estilo.css">
+    <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
 </head>
 <body>
     <div class="titulo">
@@ -16,7 +16,7 @@
         <div class="row">
             <div class=" col-lg-4 login">
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
-                <img src="/assets//img/logo-s.png" class="login-logo">
+                <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
                 <p class="pcorreo">Correo de recuperacion enviado. Por favor revisa tu bandeja de entrada.</p>
                 </div>
             </div>
