--- a/homepage.html
+++ b/homepage.html
@@ -9,13 +9,13 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="c:/github/barberiac:/github/barberia/assets/css/estilo.css">
+    <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
     <title>Document</title>
     <div class="container-fluid titulo">
         Bienvenido "Home"
     </div>
     <div class="container-fluid" style="padding: 15px;">
-        <img src="assets/img/logo-s.png" />
+        <img src="c:/github/barberia/assets/img/logo-s.png" />
     </div>
     <div class="container">
         <div id="carouselExampleCaptions" class="carousel slide">
@@ -29,24 +29,25 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="assets/img/barbe2.png" class="d-block w-100" style="height: 440px;">
+                    <img src="c:/github/barberia/assets/img/barbe2.png" class="d-block w-100" style="height: 440px;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Experiencia de Corte Excepcional</h5>
                         <p>Sumérgete en un mundo de elegancia y precisión con nuestros cortes de alta calidad.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/barbe3.png" class="d-block w-100" style="height: 440px;">
+                    <img src="c:/github/barberia/assets/img/barbe3.png" class="d-block w-100" style="height: 440px;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Definición y Distinción</h5>
                         <p>Logra una barba definida y distinguida con nuestra atención meticulosa a cada detalle.</p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="assets/img/barbe1.png" class="d-block w-100" style="height: 440px;">
+                    <img src="c:/github/barberia/assets/img/barbe1.png" class="d-block w-100" style="height: 440px;">
                     <div class="carousel-caption d-none d-md-block">
                         <h5>Corte Personalizado</h5>
-                        <p style="background-color: black;">Deja que nuestro equipo de expertos transforme tu apariencia y eleve tu confianza a nuevas alturas.</p>
+                        <p style="background-color: black;">Deja que nuestro equipo de expertos transforme tu apariencia
+                            y eleve tu confianza a nuevas alturas.</p>
                     </div>
                 </div>
             </div>
@@ -77,7 +78,7 @@
         <div class="row">
             <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/img/cortecabello.png" class="card-img-top">
+                    <img src="c:/github/barberia/assets/img/cortecabello.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Corte de Cabello</h5>
                         <p class="card-text">Asesoría, corte, lavado y peinado de cabello, incluye aplicación de pomada
@@ -88,7 +89,7 @@
             </div>
             <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/img/perfilado.png" class="card-img-top">
+                    <img src="c:/github/barberia/assets/img/perfilado.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Perfilado de Barba</h5>
                         <p class="card-text">Perfilado navaja, arreglo de barba, toallas calientes.Incluye aplicación de
@@ -100,7 +101,7 @@
             </div>
             <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/img/afeitado.png" class="card-img-top">
+                    <img src="c:/github/barberia/assets/img/afeitado.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Afeitado al Ras</h5>
                         <p class="card-text">Toallas calientes, aplicación de crema/gel de afeitar, rasurado con navaja
@@ -111,7 +112,7 @@
             </div>
             <div class="col sm-3">
                 <div class="card" style="width: 18rem;">
-                    <img src="assets/img/facial.png" class="card-img-top">
+                    <img src="c:/github/barberia/assets/img/facial.png" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Tratamiento Facial</h5>
                         <p class="card-text">Limpieza, exfolación, toallas calientes, mascara de carbón, loción
@@ -127,14 +128,29 @@
         UBICACIÓN
     </div><br><br><br>
     <div class="container-fluids" style="border-color: black; border-radius: 50%; padding: 40px">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.292247802172!2d-70.68076012521905!3d-33.36343549305959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses-419!2scl!4v1711684061143!5m2!1ses-419!2scl"
-                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>       
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3332.292247802172!2d-70.68076012521905!3d-33.36343549305959!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662c7025c925e0f%3A0x7f2f6a657c08d14a!2sDuoc%20UC%3A%20Sede%20Plaza%20Norte!5e0!3m2!1ses-419!2scl!4v1711684061143!5m2!1ses-419!2scl"
+            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
+    </div>
+
+    <div class="container-fluid">
+        <div class="row text-center">
+            <div class="col sm-4">
+                <img src="c:/github/barberia/assets//img/whatsapplogo.webp" class="home-logo">
+            </div>
+            <div class="col sm-4">
+                <img src="c:/github/barberia/assets//img/instagram.jpg" class="home-logo">
+            </div>
+            <div class="col sm-4">
+                <img src="c:/github/barberia/assets//img/facebook.jpg" class="home-logo">
+            </div>
+        </div>
     </div>
 
 </body>
 <div class="container-fluid titulo">
     Bienvenido "Home"
 </div>
+
 </html>
