--- a/login.html
+++ b/login.html
@@ -16,8 +16,7 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class=" col-lg-4 login">
-
+            <div class="col-lg-4 login text-center">
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
                     <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
                     <div class="mb-3 align-items-center justify-content-center">
