se agregan imagenes

--- a/homepage.html
+++ b/homepage.html
@@ -137,13 +137,13 @@
     <div class="container-fluid">
         <div class="row text-center">
             <div class="col sm-4">
-                <img src="c:/github/barberia/assets//img/whatsapplogo.webp" class="home-logo">
+                <img src="c:/github/barberia/assets//img/whatsapp.png" class="home-logo">
             </div>
             <div class="col sm-4">
-                <img src="c:/github/barberia/assets//img/instagram.jpg" class="home-logo">
+                <img src="c:/github/barberia/assets//img/instagram.png" class="home-logo">
             </div>
             <div class="col sm-4">
-                <img src="c:/github/barberia/assets//img/facebook.jpg" class="home-logo">
+                <img src="c:/github/barberia/assets//img/facebook.png" class="home-logo">
             </div>
         </div>
     </div>
