--- a/login.html
+++ b/login.html
@@ -16,11 +16,12 @@
 
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-4 login text-center">
+            <div class=" col-lg-4 login text-center">
+
                 <div style="background-color: white; padding: 40px;border-radius:5%;">
                     <img src="c:/github/barberia/assets//img/logo-s.png" class="login-logo">
                     <div class="mb-3 align-items-center justify-content-center">
-                        <label for="formGroupExampleInput" class="form-label text-center">Correo</label>
+                        <label for="formGroupExampleInput" style="text-align:justify;">Correo</label>
                         <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
                     </div>
                     <div class="mb-3">
