--- a/homepage.html
+++ b/homepage.html
@@ -11,11 +11,18 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" href="c:/github/barberia/assets/css/estilo.css">
     <title>Document</title>
+    <a name='home'></a>
     <div class="container-fluid titulo">
-        Bienvenido "Home"
+        <div class="row">
+            <div class="col"><a href="#home">Home</a></div>
+            <div class="col" style="color: white;"><a href="#servicio">Servicios</a></div>
+            <div class="col"><a href="#ubicacion">Ubicacion</a></div>
+            <div class="col"><a href="#contacto">Contacto</a></div>
+        </div>
+
     </div>
-    <div class="container-fluid" style="padding: 15px;">
-        <img src="c:/github/barberia/assets/img/logo-s.png" class="social-logo" />
+    <div class="container-fluid text-center style=" padding: 15px;">
+        <img src="c:/github/barberia/assets/img/logo-s.png" />
     </div>
     <div class="container">
         <div id="carouselExampleCaptions" class="carousel slide">
@@ -74,6 +81,7 @@
 
 <body>
     <div class="container-fluid">
+        <a name="servicio"></a>
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
         <div class="row">
             <div class="col sm-3">
@@ -134,8 +142,16 @@
             referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
     </div>
 
-    <div class="container-fluid">
-        <div class="row text-center">
+    <div class="container-fluid text-center">
+        <a name="ubicacion"></a>
+        <div class="container-fluid psub">
+            UBICACIÓN
+        </div><br><br><br>
+        <a name="contacto"></a>
+        <div class="container-fluid psub">
+            CONTACTO
+        </div><br><br><br>
+        <div class="row">
             <div class="col sm-4">
                 <img src="c:/github/barberia/assets//img/whatsapp.png" class="social-logo">
             </div>
