--- a/homepage.html
+++ b/homepage.html
@@ -21,7 +21,7 @@
         </div>
 
     </div>
-    <div class="container-fluid text-center style=" padding: 15px;">
+    <div class="container-fluid text-center" style="padding: 15px;">
         <img src="c:/github/barberia/assets/img/logo-s.png" />
     </div>
     <div class="container">
@@ -132,7 +132,20 @@
         </div>
     </div>
     <br><br><br>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png" style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png" style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios3.png" style="background-size: cover; background-position: center;"></div>
+        </div>
+        <div class="row">
+            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios4.png" style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios5.png" style="background-size: cover; background-position: center;"></div>
+        </div>
+    </div>
+
     <div class="container-fluids text-center" style="border-color: black; border-radius: 50%; padding: 40px">
+        <a name="ubicacion"></a>
         <div class="container-fluid psub">
             UBICACIÓN
         </div><br><br><br>
@@ -141,12 +154,7 @@
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe><br><br><br>
     </div>
-
     <div class="container-fluid text-center">
-        <a name="ubicacion"></a>
-        <div class="container-fluid psub">
-            UBICACIÓN
-        </div><br><br><br>
         <a name="contacto"></a>
         <div class="container-fluid psub">
             CONTACTO
