--- a/homepage.html
+++ b/homepage.html
@@ -21,56 +21,20 @@
         </div>
 
     </div>
-    <div class="container-fluid text-center" style="padding: 15px;">
+    <div class="container-fluid login-logo" style="padding: 15px;">
         <img src="c:/github/barberia/assets/img/logo-s.png" />
     </div>
-    <div class="container">
-        <div id="carouselExampleCaptions" class="carousel slide">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                    aria-current="true" aria-label="Slide 1"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                    aria-label="Slide 2"></button>
-                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                    aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="c:/github/barberia/assets/img/barbe2.png" class="d-block w-100" style="height: 440px;">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Experiencia de Corte Excepcional</h5>
-                        <p>Sumérgete en un mundo de elegancia y precisión con nuestros cortes de alta calidad.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="c:/github/barberia/assets/img/barbe3.png" class="d-block w-100" style="height: 440px;">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Definición y Distinción</h5>
-                        <p>Logra una barba definida y distinguida con nuestra atención meticulosa a cada detalle.</p>
-                    </div>
-                </div>
-                <div class="carousel-item">
-                    <img src="c:/github/barberia/assets/img/barbe1.png" class="d-block w-100" style="height: 440px;">
-                    <div class="carousel-caption d-none d-md-block">
-                        <h5>Corte Personalizado</h5>
-                        <p style="background-color: black;">Deja que nuestro equipo de expertos transforme tu apariencia
-                            y eleve tu confianza a nuevas alturas.</p>
-                    </div>
-                </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
-                data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
+    <div class="container-fluid text-center">
+        <div class="row">
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/barbe3.png"
+                    style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/barbe2.png"
+                    style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/barbe1.png"
+                    style="background-size: cover; background-position: center;"></div>
         </div>
-
     </div>
+
     <div class="container-fluid" style="padding: 50px">
         <p class="ppagina">Nos especializamos en cortes de cabello, barba y afeitado para
             hombres. Nuestro equipo de barberos se preocupa de entregar
@@ -79,7 +43,7 @@
     </div>
 </head>
 
-<body>
+<body class="text-center">
     <div class="container-fluid">
         <a name="servicio"></a>
         <p class="psub" style="padding: 100px;">NUESTROS SERVICIOS</p>
@@ -134,13 +98,18 @@
     <br><br><br>
     <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png" style="background-size: cover; background-position: center;"></div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png" style="background-size: cover; background-position: center;"></div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios3.png" style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios1.png"
+                    style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios2.png"
+                    style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/servicios3.png"
+                    style="background-size: cover; background-position: center;"></div>
         </div>
         <div class="row">
-            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios4.png" style="background-size: cover; background-position: center;"></div>
-            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios5.png" style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios4.png"
+                    style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-6"><img src="c:/github/barberia/assets/img/servicios5.png"
+                    style="background-size: cover; background-position: center;"></div>
         </div>
     </div>
 
