--- a/homepage.html
+++ b/homepage.html
@@ -26,12 +26,15 @@
     </div>
     <div class="container-fluid text-center">
         <div class="row">
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/barbe3.png"
-                    style="background-size: cover; background-position: center;"></div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/barbe2.png"
-                    style="background-size: cover; background-position: center;"></div>
-            <div class="col-sm-4"><img src="c:/github/barberia/assets/img/barbe1.png"
-                    style="background-size: cover; background-position: center;"></div>
+            <div class="col-sm-4">
+                <img src="c:/github/barberia/assets/img/barbe3.png" style="max-width: 100%;">
+            </div>
+            <div class="col-sm-4">
+                <img src="c:/github/barberia/assets/img/barbe2.png" style="max-width: 100%;">
+            </div>
+            <div class="col-sm-4">
+                <img src="c:/github/barberia/assets/img/barbe1.png" style="max-width: 100%;">
+            </div>
         </div>
     </div>
 
